--- a/Dockerfile.route-agent
+++ b/Dockerfile.route-agent
@@ -47,21 +47,22 @@ ARG IMAGE_DESCRIPTION
 ARG SUMMARY
 
 RUN microdnf update && \
-    microdnf -y install --nodocs iproute iptables && \
+    microdnf -y install --nodocs iproute iptables shadow-utils && \
     microdnf clean all
 
-#RUN adduser -r -u 1001010000 submariner
+RUN adduser -r -l -u 1001010000 -G root submariner
 
-COPY --from=builder $REMOTE_SOURCE_DIR/package/submariner-route-agent $REMOTE_SOURCE_DIR/package/submariner-route-agent.sh /usr/local/bin/
+COPY --from=builder --chown=submariner:submariner $REMOTE_SOURCE_DIR/package/submariner-route-agent $REMOTE_SOURCE_DIR/package/submariner-route-agent.sh /usr/local/bin/
 
 # Wrapper scripts to use iptables from the host when that's available
-COPY --from=builder $REMOTE_SOURCE_DIR/package/iptables-wrapper.in /usr/sbin/
+COPY --from=builder --chown=submariner:submariner $REMOTE_SOURCE_DIR/package/iptables-wrapper.in /usr/sbin/
 
 RUN chmod a+x /usr/local/bin/submariner-route-agent /usr/local/bin/submariner-route-agent.sh
 
-USER 1001010000
+# TODO: submariner-route-agent.sh and some go modules require to be run as superuser
+#USER 1001010000
 
-ENTRYPOINT ["/usr/local/bin/submariner-route-agent", "-alsologtostderr"]
+ENTRYPOINT ["/usr/local/bin/submariner-route-agent.sh"]
 
 LABEL com.redhat.component="submariner-route-agent-container" \
       name="submariner-io/submariner-route-agent-rhel8" \
