--- a/Dockerfile.lighthouse-coredns
+++ b/Dockerfile.lighthouse-coredns
@@ -1,30 +1,23 @@
-FROM registry-proxy.engineering.redhat.com/rh-osbs/ubi8:8-released as builder
+FROM registry-proxy.engineering.redhat.com/rh-osbs/openshift-golang-builder:rhel_8_golang_1.13 AS builder
+ARG GOCACHE
+ARG GOPATH
+ARG REMOTE_SOURCE
+ARG REMOTE_SOURCE_DIR
+USER root
+RUN mv -f /etc/yum.repos.d/ubi.repo /tmp || :
+USER 0
+ADD atomic-reactor-repos/* /etc/yum.repos.d/
 
-ENV USE_VENDORIZED_BUILD_HARNESS=true \
-COMPONENT_NAME=lighthouse-coredns \
-COMPONENT_VERSION=1.0 \
-COMPONENT_TAG_EXTENSION=" " \
-HOST_ARCH="amd64" \
-ARCH="amd64" \
-GOLANG_ARCH_amd64=amd64 \
-GOLANG_ARCH_arm=armv6l \
-GOLANG_ARCH=GOLANG_ARCH_${ARCH} \
-GOPATH=/go \
-GO111MODULE=on \
-#GOFLAGS="-mod=vendor" \
-GOPROXY="https://proxy.golang.org,direct" \
-REMOTE_SOURCE=. \
-REMOTE_SOURCE_DIR=/app/ \
-CI_UPSTREAM_VERSION="v0.4.0-rc2" \
-CI_CONTAINER_VERSION="v1"\
-CI_CONTAINER_RELEASE="1"
+ENV COMPONENT_NAME=lighthouse-coredns \
+COMPONENT_VERSION=0.4 \
+COMPONENT_TAG_EXTENSION=" "
 
 # Cachito
 COPY $REMOTE_SOURCE $REMOTE_SOURCE_DIR
 
-RUN dnf -y install golang make git
+RUN dnf -y install make git
 
-WORKDIR $REMOTE_SOURCE_DIR
+WORKDIR $REMOTE_SOURCE_DIR/app
 
 RUN mkdir -p bin dist output
 
@@ -32,20 +25,22 @@ RUN sed -i '/^kubernetes:kubernetes/a lighthouse:github.com/submariner-io/lighth
 
 RUN go mod edit -replace k8s.io/apimachinery=k8s.io/apimachinery@v0.0.0-20190313205120-d7deff9243b1 && \
 go mod edit -replace github.com/openzipkin-contrib/zipkin-go-opentracing=github.com/openzipkin-contrib/zipkin-go-opentracing@v0.3.5 && \
-go mod edit -replace github.com/submariner-io/lighthouse=github.com/submariner-io/lighthouse@${CI_UPSTREAM_VERSION}
+go mod edit -replace github.com/submariner-io/lighthouse=github.com/submariner-io/lighthouse@v0.4.0
 
-#RUN go mod download 
-#RUN go mod vendor
-RUN make BINARY=bin/lighthouse-coredns SYSTEM=GOOS=linux GOARCH=${ARCH}
+RUN make BINARY=bin/lighthouse-coredns SYSTEM=GOOS=linux GOARCH=amd64
 #----------------------------------------#
 
+#@follow_tag(ubi8-minimal:8-released)
+USER root
+RUN mv -fZ /tmp/ubi.repo /etc/yum.repos.d/ubi.repo || :
+USER 0
 FROM registry-proxy.engineering.redhat.com/rh-osbs/ubi8-minimal:8-released
-
-ENV REMOTE_SOURCE=. \
-    REMOTE_SOURCE_DIR=/app \
-    CI_UPSTREAM_VERSION="v0.4.0-rc2" \
-    CI_CONTAINER_VERSION="v1"\
-    CI_CONTAINER_RELEASE="1"
+ARG GOCACHE
+ARG GOPATH
+ARG REMOTE_SOURCE
+ARG REMOTE_SOURCE_DIR
+RUN mv -f /etc/yum.repos.d/ubi.repo /tmp || :
+ADD atomic-reactor-repos/* /etc/yum.repos.d/
 
 ARG VCS_REF
 ARG VCS_URL
@@ -57,13 +52,18 @@ RUN microdnf update && \
     microdnf -y install --nodocs shadow-utils && \
     microdnf clean all
 
-RUN adduser -r -l -u 1001010000 -G root lighthouse
+RUN adduser -r -l -u 1001010000 lighthouse
 
-COPY --from=builder --chown=lighthouse:lighthouse $REMOTE_SOURCE_DIR/bin/lighthouse-coredns /usr/local/bin/
+COPY --from=builder --chown=lighthouse:lighthouse $REMOTE_SOURCE_DIR/app/bin/lighthouse-coredns /usr/local/bin/
 
 RUN chmod a+x /usr/local/bin/lighthouse-coredns
 
-RUN setcap CAP_NET_BIND_SERVICE=+eip /usr/local/bin/lighthouse-coredns
+# linux capability for enabling port 53
+#RUN setcap CAP_NET_BIND_SERVICE=+eip /usr/local/bin/lighthouse-coredns
+
+RUN mkdir /licenses
+
+COPY --from=builder $REMOTE_SOURCE_DIR/app/LICENSE /licenses/
 
 USER 1001010000
 
@@ -72,12 +72,25 @@ EXPOSE 53 53/udp
 ENTRYPOINT ["/usr/local/bin/lighthouse-coredns"]
 
 LABEL com.redhat.component="lighthouse-coredns-container" \
-      name="submariner-io/lighthouse-coredns-rhel8" \
-      version="${CI_CONTAINER_VERSION}" \
-      release="${CI_CONTAINER_RELEASE}" \
+      name="submariner/lighthouse-coredns-rhel8" \
+      version="v0.4" \
+      release="1" \
       summary="lighthouse-coredns" \
-      io.openshift.expose-services="" \
-      io.openshift.tags="data,images" \
+      io.openshift.expose-services="53/udp:dns" \
+      io.openshift.tags="lighthouse-coredns,rhel8" \
+      io.openshift.wants="lighthouse-agent" \
+      io.openshift.non-scalable="false" \
       io.k8s.display-name="lighthouse-coredns" \
+      io.k8s.description="lighthouse-coredns" \
       maintainer="['multi-cluster-networking@redhat.com']" \
       description="lighthouse-coredns"
+
+ADD content_manifest.lighthouse-coredns-container-v0.4-1.json /root/buildinfo/content_manifests/lighthouse-coredns-container-v0.4-1.json
+ADD Dockerfile-submariner-lighthouse-coredns-rhel8-v0.4-1 /root/buildinfo/Dockerfile-submariner-lighthouse-coredns-rhel8-v0.4-1
+LABEL "distribution-scope"="private" "vendor"="Red Hat, Inc." "url"="https://access.redhat.com/containers/#/registry.access.redhat.com/submariner/lighthouse-coredns-rhel8/images/v0.4-1" "vcs-type"="git" "architecture"="x86_64" "build-date"="2020-07-20T05:17:55.420190" "com.redhat.license_terms"="https://www.redhat.com/agreements" "com.redhat.build-host"="cpt-1001.osbs.prod.upshift.rdu2.redhat.com" "vcs-ref"="88b5e1759563c711f9ed321a84cfd816bd147625"
+USER root
+RUN rm -f '/etc/yum.repos.d/odcs-413136-ac3d1.repo'
+USER 1001010000
+USER root
+RUN mv -fZ /tmp/ubi.repo /etc/yum.repos.d/ubi.repo || :
+USER 1001010000
